--- a/client/src/pages/homepage.css
+++ b/client/src/pages/homepage.css
@@ -1,24 +1,24 @@
 .homepage-container {
-display: flex;
-flex-direction: column;
-width: 100vw;
-padding: 15px;
+  display: flex;
+  flex-direction: column;
+  width: 100vw;
+  padding: 1rem;
 }
 
 .homepage-title {
-display: flex;
-flex-direction: row;
-align-items: flex-start;
-padding: 15px;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  padding: 1rem;
 }
 
 .nav-bar {
-display: flex;
-flex-direction: row;
-justify-content: space-between;
-padding: 15px;
-border-bottom: 1px #4F4F4F solid;
-z-index: 10000;
-position: sticky;
-top: 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 1rem;
+  border-bottom: 1px #4f4f4f solid;
+  z-index: 10000;
+  position: sticky;
+  top: 0;
 }
