--- a/client/src/layouts/Dashboard/dashboard.css
+++ b/client/src/layouts/Dashboard/dashboard.css
@@ -1,8 +1,8 @@
 .dashboard {
   border: 1px solid #e0e0e0;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
+  display: flex !important;
+  flex-wrap: wrap !important;
+  justify-content: space-around !important;
   gap: 5em;
 }
 
@@ -10,12 +10,13 @@
   margin: 1em;
   padding: 1em;
 }
-.dashboard .table {
+
+.table {
   border: 1px solid #e0e0e0;
-  width: 20%;
+  width: 20% !important;
 }
 
 .dashboard .graph {
   border: 1px solid #e0e0e0;
-  width: 90%;
+  width: 90% !important;
 }
