--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,7 +3,7 @@
   text-align: center;
 }
 
-.logo {
+/* .logo {
   height: 6em;
   padding: 1.5em;
   will-change: filter;
@@ -37,4 +37,4 @@
 
 .read-the-docs {
   color: #888;
-}
+} */
