--- a/client/src/layouts/UpdateStatusLayout/updateStatusLayout.css
+++ b/client/src/layouts/UpdateStatusLayout/updateStatusLayout.css
@@ -1,18 +1,18 @@
-body {
-  margin: 0;
-  padding: 0;
-}
-
-.container {
-  width: 100%;
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
 .update-status-layout {
   display: flex;
-  flex-wrap: wrap;
   flex-direction: row;
+}
+
+.left-column {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  padding: 1rem;
+}
+
+.right-column {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  padding: 1rem;
 }
