--- a/client/src/components/WorkOrder/workorder.css
+++ b/client/src/components/WorkOrder/workorder.css
@@ -4,7 +4,7 @@
   justify-content: center;
   align-items: center;
   width: 35vw;
-  margin: auto;
+  margin: auto 0;
 }
 
 .work-order-layout .flex.flex-col.space-y-3 > * {
