--- a/client/src/layouts/Navbar/navBar.css
+++ b/client/src/layouts/Navbar/navBar.css
@@ -3,10 +3,15 @@
   flex-direction: row;
   justify-content: flex-end;
   padding: 1rem;
-  z-index: 10000;
+  z-index: 2; /* ensures nav bar stays on top of body content */
   position: sticky;
   top: 0;
   flex-wrap: nowrap;
   align-items: center;
-  border-bottom: 2px solid black;
+  border-radius: 5px; 
+  background-color: var(--primary-color);
+  color:white;
+  box-shadow: 0px 1px 4px 0px black; 
 }
+
+
