Co-authored-by: David Blumenshine <DavidBlumenshine@users.noreply.github.com> Co-authored-by: Dan DiGangi <dandigangi@proton.me>

--- a/client/src/components/AccountMenu/accountmenu.css
+++ b/client/src/components/AccountMenu/accountmenu.css
@@ -8,8 +8,13 @@
   margin-left: -10px;
   z-index: 3; /* ensures dropdown stays on top of nav bar */
   background-color: white !important;
+  color: black;
 }
 
 .account-menu-layout:hover .dropdown-menu-content {
   display: block;
+}
+
+.account-btn {
+  color: black;
 }
