--- a/client/src/components/DashboardPlaceholder/tablePlaceholder.css
+++ b/client/src/components/DashboardPlaceholder/tablePlaceholder.css
@@ -6,6 +6,9 @@
 .table {
   border: 1px solid #e0e0e0;
   width: 20% !important;
+  border-radius: 5px !important;
+  background-color: white !important;
+  color: black !important;
 }
 
 .table-container {
@@ -31,11 +34,6 @@
 .table-header > * {
   /* margin-right: 1em; */
   padding: 0 !important;
-}
-
-.table-header2 {
-  margin-right: 1em;
-  padding-left: 0 !important;
 }
 
 .temp-block {
