--- a/client/src/pages/LoginPage/LoginPage.css
+++ b/client/src/pages/LoginPage/LoginPage.css
@@ -1,40 +1,52 @@
 .login-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-}
-
-/* Login form */
-.login-form {
-  width: 300px;
+  max-width: 400px;
+  margin: 0 auto;
   padding: 20px;
-  background-color: #f2f2f2;
+  border: 1px solid #ccc;
   border-radius: 5px;
+  background-color: #f9f9f9;
 }
 
-/* Form inputs */
-.login-form input {
+.login-form {
+  margin-bottom: 20px;
+}
+
+.login-from label {
+  display: block;
+  margin-bottom: 5px;
+}
+
+.login-form input[type='email'],
+.login-form input[type='password'] {
   width: 100%;
-  padding: 10px;
+  padding: 8px;
   margin-bottom: 10px;
   border: 1px solid #ccc;
   border-radius: 3px;
 }
 
-/* Submit button */
 .login-form button {
   width: 100%;
   padding: 10px;
-  background-color: #4caf50;
-  color: white;
   border: none;
   border-radius: 3px;
+  background-color: #007bff;
+  color: #fff;
+  font-size: 16px;
   cursor: pointer;
 }
 
-/* Error message */
-.login-form .error-message {
+.login-form button:hover {
+  background-color: #0056b3;
+}
+
+.error-message {
   color: red;
-  margin-bottom: 10px;
+  font-size: 14px;
+}
+
+.password-toggle {
+  display: inline-block;
+  margin-left: 5px;
+  cursor: pointer;
 }
