--- a/client/src/pages/LoginPage/LoginPage.css
+++ b/client/src/pages/LoginPage/LoginPage.css
@@ -1,52 +1,49 @@
 .login-container {
-  max-width: 400px;
-  margin: 0 auto;
-  padding: 20px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  background-color: #f9f9f9;
-}
-
-.login-form {
-  margin-bottom: 20px;
-}
-
-.login-from label {
-  display: block;
-  margin-bottom: 5px;
-}
-
-.login-form input[type='email'],
-.login-form input[type='password'] {
+  display: flex;
+  /* flex-direction: column; */
+  justify-content: center;
+  align-items: center;
   width: 100%;
-  padding: 8px;
-  margin-bottom: 10px;
-  border: 1px solid #ccc;
-  border-radius: 3px;
+  padding: 0.5rem;
+  height: 100vh;
+  width: 100vw;
+  background-image: url('forestbg.jpg');
+  background-size: cover;
+  background-position: center;
+}
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.login-form button {
-  width: 100%;
-  padding: 10px;
-  border: none;
-  border-radius: 3px;
-  background-color: #007bff;
-  color: #fff;
-  font-size: 16px;
-  cursor: pointer;
+.login-layout {
+  height: 100vh;
+  width: 100vw;
+  background-image: url('forestbg.jpg');
+  background-size: 100%;
+  background-position: center;
 }
 
-.login-form button:hover {
-  background-color: #0056b3;
+.login-layout h1 {
+  font-size: 3.2em;
+  line-height: 1.1;
 }
 
-.error-message {
-  color: red;
-  font-size: 14px;
+.login-layout body {
+  margin: 0;
+  font-family: 'Poppins', sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
 }
 
-.password-toggle {
-  display: inline-block;
-  margin-left: 5px;
-  cursor: pointer;
+.login-layout code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
 }
