--- a/client/src/components/FormResponse/formResponse.css
+++ b/client/src/components/FormResponse/formResponse.css
@@ -1,9 +1,9 @@
 .form-response-layout {
   width: 35vw;
-  height: fit-content;
+  height: 50%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: flex-start;
   text-align: left;
 }
