--- a/client/src/components/WorkorderSearch/workorderSearch.css
+++ b/client/src/components/WorkorderSearch/workorderSearch.css
@@ -1,3 +1,36 @@
-.workorder-search-form {
-  color: red;
+.search-form {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 1em;
+  border: 1px solid #e0e0e0;
+  border-radius: 5px;
+  background-color: white;
+  width: 50%;
+  padding: 1rem;
+  margin: 1rem;
+}
+
+.search-input {
+  width: 25vw !important;
+}
+
+.search-btn {
+}
+
+.search-form-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 1em;
+  width: 100%;
+}
+
+.search-form-title {
+  font-size: 1.5em;
+  font-weight: 600;
+  text-align: center;
+  margin-bottom: 5px;
 }
