--- a/client/src/layouts/CheckinPageLayout/checkinPageLayout.css
+++ b/client/src/layouts/CheckinPageLayout/checkinPageLayout.css
@@ -1,11 +1,16 @@
 .checkin-page-layout {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    height: 100%;
-  }
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
 
-  .workorder-search-form {
-    color: red;
-  }
-  
+.popup-form {
+  width: 80%;
+  min-height: 70vh;
+  display: flex;
+  flex-direction: row;
+  background-color: #00541a;
+  border-radius: 5px;
+}
