--- a/client/src/layouts/CheckinPageLayout/checkinPageLayout.css
+++ b/client/src/layouts/CheckinPageLayout/checkinPageLayout.css
@@ -4,6 +4,7 @@
   justify-content: center;
   align-items: center;
   height: 100%;
+
 }
 
 .popup-form {
@@ -13,4 +14,13 @@
   flex-direction: row;
   background-color: #00541a;
   border-radius: 5px;
+  flex: 1;
 }
+
+.form-response, .gps-form {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
