--- a/client/src/components/FormResponse/formResponse.css
+++ b/client/src/components/FormResponse/formResponse.css
@@ -7,3 +7,9 @@
   align-items: flex-start;
   text-align: left;
 }
+
+.form-loading-skeleton > * {
+  width: 30vw !important;
+  margin: 1em 1em 1rem 1em !important;
+  padding: 1rem;
+}
