--- a/client/src/components/Summary/summary.css
+++ b/client/src/components/Summary/summary.css
@@ -5,6 +5,9 @@
 
 .summary-layout h2 {
   text-align: center;
+  margin-bottom: 1rem;
+  font-size: xx-large;
+  font-weight: 600;
 }
 
 .summary-table-container {
