--- a/client/src/layouts/CheckinPageLayout/checkinPageLayout.css
+++ b/client/src/layouts/CheckinPageLayout/checkinPageLayout.css
@@ -4,7 +4,6 @@
   justify-content: center;
   align-items: center;
   height: 100%;
-
 }
 
 .popup-form {
@@ -17,10 +16,16 @@
   flex: 1;
 }
 
-.form-response, .gps-form {
+.form-response,
+.gps-form {
   flex: 1;
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 50%;
 }
 
+.gps-form {
+  width: 100%;
+  padding: 20px;
+}
