--- a/client/src/components/Summary/summary.css
+++ b/client/src/components/Summary/summary.css
@@ -1,6 +1,10 @@
 .summary-layout {
   width: 100%;
   min-height: 75vh;
+  border: 1px solid #e0e0e0;
+  border-radius: 5px !important;
+  background-color: white !important;
+  color: black !important;
 }
 
 .summary-layout h2 {
