--- a/client/src/layouts/CheckinPageLayout/checkinPageLayout.css
+++ b/client/src/layouts/CheckinPageLayout/checkinPageLayout.css
@@ -23,9 +23,16 @@
   justify-content: center;
   align-items: center;
   width: 50%;
+  padding: 20px;
+  height: 100%;
+  flex-grow: 1;
 }
 
 .gps-form {
   width: 100%;
   padding: 20px;
+}
+
+.form-response {
+  
 }
