created work acitivty page

--- a/client/src/components/WorkActivity/WorkActivity.css
+++ b/client/src/components/WorkActivity/WorkActivity.css
@@ -8,7 +8,7 @@
 .grid {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-  grid-gap: 20px; /* Add gap between grid items */
+  grid-gap: 20px;
 }
 
 .flex-col {
@@ -18,4 +18,17 @@
 
 .space-y-1-5 > * + * {
   margin-top: 1.5rem; /* Adjust the space between elements */
+}
+
+.grid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr); /* Three columns with equal width */
+  grid-gap: 20px; /* Add gap between grid items */
+}
+
+@media (max-width: 768px) {
+  /* Media query to adjust layout on smaller screens */
+  .grid {
+    grid-template-columns: repeat(1, 1fr); /* Change to single column layout */
+  }
 }
