Update navigation link and styling in NavigationMenu and WorkActivity components

--- a/client/src/components/WorkActivity/WorkActivity.css
+++ b/client/src/components/WorkActivity/WorkActivity.css
@@ -3,6 +3,13 @@
 .card-container {
   margin: 20px;
   padding: 20px;
+  height: 100%;
+  width: 100%;
+}
+
+.activity-scroll {
+  overflow: hidden;
+  height: 75vh;
 }
 
 .grid {
