--- a/client/src/components/WorkActivity/WorkActivity.css
+++ b/client/src/components/WorkActivity/WorkActivity.css
@@ -1,10 +1,9 @@
 /* WorkActivity.css */
 
 .card-container {
-  margin: 20px;
   padding: 20px;
   height: 100%;
-  width: 100%;
+  width: 50vw;
 }
 
 .activity-scroll {
