--- a/client/src/components/Gps/GpsCheckoutForm.css
+++ b/client/src/components/Gps/GpsCheckoutForm.css
@@ -12,6 +12,7 @@
   justify-content: space-evenly;
   width: 100% !important;
   height: 100% !important;
+  margin: 12px 0;
 }
 
 .gps-layout form .space-y-8 > * {
