--- a/client/src/pages/CreateWorkorderPage/CreateWorkorderPage.css
+++ b/client/src/pages/CreateWorkorderPage/CreateWorkorderPage.css
@@ -1,3 +1,9 @@
+.Workorder-container {
+  display: flex;
+  flex-direction: column;
+  padding: 0.5rem;
+}
+
 .form {
   width: 80%;
   justify-content: center;
