--- a/client/src/components/FAQ/FAQ.css
+++ b/client/src/components/FAQ/FAQ.css
@@ -1,7 +1,8 @@
-.about-page-container {
+.FAQ-container {
   display: flex;
   flex-direction: column;
+  align-items: center;
   padding: 0.5rem;
   height: 100%;
-  width: 100vw;
+  width: 50vw;
 }
