--- a/client/src/pages/LoginPage/LoginPage.css
+++ b/client/src/pages/LoginPage/LoginPage.css
@@ -23,7 +23,7 @@
 .login-layout {
   height: 100vh;
   width: 100vw;
-  background-image: url('forestbg.jpg');
+  /* background-image: url('forestbg.jpg'); */
   background-size: 100%;
   background-position: center;
 }
