--- a/client/src/layouts/AboutPageLayout/aboutPageLayout.css
+++ b/client/src/layouts/AboutPageLayout/aboutPageLayout.css
@@ -28,19 +28,13 @@
 
 .about-page-content-block img {
   width: 20vw;
+  border: 4px solid #00541a;
 }
 
 .carousel-image {
   width: 280px;
   height: 300px;
   object-fit: cover;
-}
-.about-page-content-team-block {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  width: 90%;
-  margin-bottom: 1rem;
 }
 
 .separator {
