--- a/client/src/layouts/AboutPageLayout/aboutPageLayout.css
+++ b/client/src/layouts/AboutPageLayout/aboutPageLayout.css
@@ -1,3 +1,43 @@
+.how-it-works {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  background-color: white;
+  height: 80vh;
+  width: 100%;
+  padding: 1rem;
+  margin: 1rem;
+  border-radius: 10px;
+  border: 1px solid #e0e0e0;
+}
+
+.how-it-works-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: white;
+  padding: 1rem;
+  margin: 1rem;
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+  border: 1px solid #e0e0e0;
+}
+
+.how-it-works-nav {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+
+.how-it-works aside {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  background-color: white;
+  height: 100%;
+}
+
 .about-page-content {
   display: flex;
   flex-direction: column;
@@ -12,6 +52,11 @@
   font-size: 2em;
   margin-bottom: 1rem;
   margin-top: 1rem;
+  font-weight: bolder;
+}
+
+.about-page-content h3 {
+  font-size: 1.2em;
 }
 
 .about-page-content-block {
