--- a/client/src/layouts/AboutPageLayout/aboutPageLayout.css
+++ b/client/src/layouts/AboutPageLayout/aboutPageLayout.css
@@ -24,6 +24,12 @@
   border: 1px solid #e0e0e0;
 }
 
+.how-it-works-content img {
+  width: 90%;
+  height: 90%;
+  object-fit: contain;
+}
+
 .how-it-works-nav {
   display: flex;
   flex-direction: column;
