--- a/client/src/index.css
+++ b/client/src/index.css
@@ -12,6 +12,7 @@
   --primary-color: #00541a;
   --secondary-color: #61ce70;
   --tertiary-color: #4f4f4f;
+  --link-color: #a7cf37;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
