--- a/client/src/components/Footer/Footer.css
+++ b/client/src/components/Footer/Footer.css
@@ -1,13 +1,97 @@
 .footer-container {
   display: flex;
-  justify-content: center;
-  align-items: center;
+  flex-direction: column;
   background-color: var(--primary-color);
-  height: 100px;
-  width: 100%;
-  position: relative;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  z-index: 100;
+  padding: 45px 0 0;
+  margin-top: 5rem;
+  font-size: 15px;
+  line-height: 24px;
+  color: #ffffffbf;
+}
+
+.footer-container h6 {
+  font-size: 1.25rem;
+  font-weight: 500;
+  line-height: 1.6;
+  margin: 0;
+  color: #ffffff;
+}
+
+.info-container {
+  margin: 0 auto;
+  padding: 0 20px;
+  max-width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: start;
+}
+
+.about-section {
+  width: 70%;
+}
+
+.links-section {
+  width: 15%;
+}
+
+.links-list {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+}
+
+.footer-links.active {
+  color: var(--link-color);
+  border-bottom: 1px solid var(--link-color);
+}
+
+.hr-with-text {
+  display: flex;
+  align-items: center;
+  text-align: center;
+  margin: 20px 0;
+  width: 50%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.hr-with-text::before,
+.hr-with-text::after {
+  content: '';
+  flex: 1;
+  border-bottom: 1px solid #f5f5f5e1; /* Fallback for older browsers */
+  border-bottom: 1px solid;
+  border-image: linear-gradient(to right, transparent, #f5f5f5e1, transparent) 1;
+}
+
+.hr-with-text:not(:empty)::before {
+  margin-right: 1.25em;
+}
+
+.hr-with-text:not(:empty)::after {
+  margin-left: 1.25em;
+}
+
+.footer-container {
+  padding-left: 0;
+  list-style: none;
+}
+
+.footer-container a {
+  color: #ffffffbf;
+}
+
+.footer-container a:active,
+.footer-container a:focus,
+.footer-container a:hover {
+  color: var(--link-color);
+  text-decoration: none;
+}
+
+.copyright {
+  display: flex;
+  justify-content: start;
+  font-size: small;
+  padding: 0 20px;
 }
