--- a/client/src/layouts/Navbar/navBar.css
+++ b/client/src/layouts/Navbar/navBar.css
@@ -3,13 +3,20 @@
   flex-direction: row;
   justify-content: flex-end;
   padding: 1rem;
-  z-index: 2; /* ensures nav bar stays on top of body content */
+  z-index: 2;
   position: sticky;
   top: 0;
   flex-wrap: nowrap;
   align-items: center;
-  border-radius: 5px;
-  background-color: var(--primary-color);
+  background-color: transparent;
   color: white;
+  transition: box-shadow 0.3s ease;
+}
+
+.nav-bar.shadow {
   box-shadow: 0px 1px 4px 0px black;
+}
+
+.nav-bar.scrolled {
+  background-color: var(--primary-color);
 }
