--- a/client/src/components/AccountMenu/accountmenu.css
+++ b/client/src/components/AccountMenu/accountmenu.css
@@ -15,6 +15,13 @@
   display: block;
 }
 
-.account-btn {
-  color: black;
+.account-name {
+  width: max-content;
+  font-weight: bold;
+  color: #333;
+  background-color: #f9f9f9;
+  padding: 10px 15px;
+  margin: 0;
+  border: 1px solid #ddd;
+  border-radius: 5px;
 }
