change border radius css on all page to make it consistent

--- a/client/src/components/FormResponse/formResponse.css
+++ b/client/src/components/FormResponse/formResponse.css
@@ -6,6 +6,7 @@
   justify-content: flex-start;
   align-items: flex-start;
   text-align: left;
+  border-radius: 6px !important;
 }
 
 .form-loading-skeleton > * {
