--- a/client/src/layouts/AboutPageLayout/aboutPageLayout.css
+++ b/client/src/layouts/AboutPageLayout/aboutPageLayout.css
@@ -4,7 +4,7 @@
   align-items: center;
   background-color: white;
   height: 80vh;
-  width: 100%;
+  width: 95vw;
   padding: 1rem;
   margin: 1rem;
   border-radius: 6px;
@@ -20,7 +20,7 @@
   margin: 1rem;
   width: 100%;
   height: 100%;
-  border-radius: 10px;
+  border-radius: 6px;
   border: 1px solid #e0e0e0;
 }
 
@@ -51,7 +51,7 @@
   background-color: white;
   padding: 1rem;
   margin: 1rem;
-  border-radius: 10px;
+  border-radius: 6px;
 }
 
 .about-page-content h2 {
