--- a/client/src/pages/CreateWorkorderPage/CreateWorkorderPage.css
+++ b/client/src/pages/CreateWorkorderPage/CreateWorkorderPage.css
@@ -4,8 +4,15 @@
   padding: 0.5rem;
 }
 
+.create-work-order-page-title {
+  font-size: 2em;
+  font-weight: bolder;
+  text-align: center;
+  margin: 1rem;
+}
+
 .form {
-  width: 80%;
+  width: 95vw;
   justify-content: center;
   align-items: center;
   margin: auto;
