replace with a better chart

--- a/client/src/components/DashboardChart/dashboardChart.css
+++ b/client/src/components/DashboardChart/dashboardChart.css
@@ -1,8 +1,17 @@
+.dashboard-chart-container {
+  width: 100%;
+  height: fit-content;
+}
+
 .dashboard-chart {
   width: 100%;
-  height: 100%;
+  height: 50vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+}
+
+.tooltip {
+  width: min-content;
 }
