--- a/client/src/layouts/AboutPageLayout/aboutPageLayout.css
+++ b/client/src/layouts/AboutPageLayout/aboutPageLayout.css
@@ -4,7 +4,7 @@
   align-items: center;
   background-color: white;
   height: 80vh;
-  width: 95vw;
+  width: fit-content;
   padding: 1rem;
   margin: 1rem;
   border-radius: 6px;
@@ -105,4 +105,15 @@
 .bullet-list {
   list-style-type: disc;
   margin-left: 20px;
+}
+
+.about-page-content-team-block {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+  width: 90%;
+  padding: 1rem;
+  margin-bottom: 1rem;
+  gap: 2rem;
 }
